<resources>
    <string name="app_name">Formulario</string>
    <string name="nombre">Nombre</string>
    <string name="anio">Años</string>
    <string name="Cuenta">Numero de Cuenta</string>
    <string name="Fecha">Fecha</string>
    <string name="Enviar">Enviar</string>
    <string name="Nombrem1">Nombre(s)</string>
    <string name="Apellidom1">Apellido(s)</string>
    <string name="IngreseNum">Ingrese número de cuenta</string>
    <string name="IngFecha">Presione para ingresar la fecha</string>
    <string name="Bienvenido">Bienvenido</string>
    <string name="carrera">Ingrese una Carrera</string>
    <string name="Aeroespacial">Ingeniería Aeroespacial</string>
    <string name="Civil">Ingeniería Civil</string>
    <string name="Geomatica">Ingeniería Geomática</string>
    <string name="Ambiental">Ingeniería Ambiental</string>
    <string name="Geofisica">Ingeniería Geofísica</string>
    <string name="Geologica">Ingeniería Geológica</string>
    <string name="Petrolera">Ingeniería Petrolera</string>
    <string name="Minas">Ingeniería de Minas y Metalurgia</string>
    <string name="Computacion">Ingeniería en Computación</string>
    <string name="Electrica">Ingeniería Eléctrica Electrónica</string>
    <string name="Telecomunicaciones">Ingeniería en Telecomunicaciones</string>
    <string name="Mecanica">Ingeniería Mecánica</string>
    <string name="Industrial">Ingeniería Industrial</string>
    <string name="Mecatronica">Ingeniería Mecatrónica</string>
    <string name="Biomedico">Ingeniería Sistemas Biomédicos</string>
    <string name="ErrorName">Se requiere por lo menos un nombre</string>
    <string name="ErrorApellido">Se requiere por lo menos un apellido</string>
    <string name="ErrorName2">El nombre no debe tener caracteres especiales, solo puede tener un espacio entre el primer y segundo nombre</string>
    <string name="ErrorApellido2">El apellido no debe tener caracteres especiales, solo puede tener un espacio entre el primer y segundo apellido</string>
    <string name="ErrorName3">Los nombres deben tener una mayuscula al inicio y no deben tener mayusculas después de la primera letra de los nombres</string>
    <string name="ErrorApellido3">Los apellidos deben tener una mayuscula al inicio y no deben tener mayusculas después de la primera letra de los apellidos</string>
    <string name="ErrorName4">No se deben de tener dos acentos en el nombre y solo puede haber dos ñ si la primera esta al inicio</string>
    <string name="ErrorApellido4">No se deben de tener dos acentos en el apellido y solo puede haber dos ñ si la primera esta al inicio</string>
    <string name="Errorcarrera">Debes seleccionar una carrera</string>
    <string name="Errorcuenta">El numero de cuenta debe de ser de 9 digitos</string>
    <string name="Errorfec">Debes ingresar una fecha valida</string>
    <string name="Errorfec2">No puedes ingresar una edad menor de 10 años</string>
    <string name="Otraresp">Enviar otra respuesta</string>
</resources>